Fixed aligncenter

--- a/style.css
+++ b/style.css
@@ -212,5 +212,6 @@ alignright {
 }
 
 aligncenter {
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
